trello-5 add functions to connect api with frontend

--- a/frontend/src/components/card/card-styles.scss
+++ b/frontend/src/components/card/card-styles.scss
@@ -7,6 +7,7 @@
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     min-height: 142px;
+    cursor: grab;
   }
   .card:hover {
     border: 1px solid $secondary; /* Change to your desired color on hover */
