--- a/frontend/src/components/skeleton/skeleton-styles.scss
+++ b/frontend/src/components/skeleton/skeleton-styles.scss
@@ -1,16 +1,34 @@
 .skeleton-card {
   width: 220px;
   height: 220px;
-  color: #dcdcdc;
-  border: 1px dashed #dcdcdc;
+  border: 1px solid #dcdcdc;
+  background-color: rgba(0, 0, 0, 0.05);
+  color:rgba(0, 0, 0, 0.05);
   border-radius: 10px;
-  padding: 15px;
+  padding: 50px 15px;
   opacity: 1;
   transition: all 0.2s ease-in-out;
- 
+  animation: shimmer-loading 2s ease-in-out 0.5s infinite;
 }
 
 .hide-skeleton-card {
   opacity: 0;
-  height: 1px;
+  height: 25px;
 }
+
+@keyframes shimmer-loading {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.skeleton-content {
+    opacity: 0;  
+  }
+  
